--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Home/Index.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
+﻿@model List<Libro>
+@{
     ViewData["Title"] = "Home Page";
+
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@if(Model!=null){
+    <table class="table table-dark">
+        <thead>
+            <tr>
+                <th scope="col">Titulo</th>
+                <th scope="col">Imagen</th>
+                @*            <th scope="col">Last</th>
+            <th scope="col">Handle</th>*@
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (Libro libro in Model)
+            {
+                <tr>
+                    <th scope="row">@libro.Titulo</th>
+                    <td><img src="~/images/@libro.Portada" style="width:150px" /></td>
+                    @*                <td>Otto</td>
+            <td>@mdo</td>*@
+                </tr>
+            }
+        </tbody>
+    </table>
+}
