--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Managed/LogIn.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Managed/LogIn.cshtml
@@ -19,25 +19,17 @@
                         </div>
 
                         <div class="form-outline mb-4">
-                            <input type="password" id="form2Example28" class="form-control form-control-lg" name="password" />
+                            <input type="password" id="form2Example28" class="form-control form-control-lg" name="pass" />
                             <label class="form-label" for="form2Example28">Password</label>
                         </div>
 
                         <div class="pt-1 mb-4">
                             <button class="btn btn-info btn-lg btn-block">Login</button>
                         </div>
-
-                        <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
-                        <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
-
                     </form>
 
                 </div>
 
-            </div>
-            <div class="col-sm-6 px-0 d-none d-sm-block">
-                <img src="https://holatelcel.com/wp-content/uploads/2021/06/kuzco-las-locuras-delemperador.jpg"
-                     alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
             </div>
         </div>
     </div>
