--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Shared/_Layout.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Libros" asp-action="Index">Libros</a>
                         </li>
                         @await Component.InvokeAsync("MenuGeneros")
+                        <partial name="_MenuUsuario" />
                     </ul>
                 </div>
             </div>
