--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/_ViewImports.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SARA_ALVAREZ_LOPEZ_TIENDA
 @using SARA_ALVAREZ_LOPEZ_TIENDA.Models
+@using SARA_ALVAREZ_LOPEZ_TIENDA.Extensions
+@using Microsoft.Extensions.Caching.Memory
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
