--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/_ViewImports.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using SARA_ALVAREZ_LOPEZ_TIENDA.Models
 @using SARA_ALVAREZ_LOPEZ_TIENDA.Extensions
 @using Microsoft.Extensions.Caching.Memory
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
