--- a/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Shared/_MenuUsuario.cshtml
+++ b/SARA_ALVAREZ_LOPEZ_TIENDA/Views/Shared/_MenuUsuario.cshtml
@@ -13,7 +13,7 @@
 {
     //libros: 2, hola barney, cerrar sesion
     <li class="nav-item">
-       <p>Hola @Context.User.Identity.Name</p>
+        <img width="50px" src="~/images/@Context.User.FindFirst("Foto").Value" /><p> Hola @Context.User.Identity.Name</p>
     </li>
     <li class="nav-item">
         <a class="nav-link btn btn-danger" asp-controller="Managed" asp-action="LogOut">LogOut</a>
